Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.10 RC
  Add icon for "Plugins->List" menu item (#2060771)
  Use external editor to edit file filters (#2082774)
  Improved command line handling (#2081779)
  Plugins: Show processing instructions in XML plugin (#1979321)
  BugFix: Didn't select word-diff cyclically by pressing F4 key (#1989858)
  BugFix: Crash when generating a folder comparison report (#2008581)
  BugFix: Table of Contents in manual (#2071625)
  BugFix: ClearCase checkout/commit dialog translation error (#2051069)
  BugFix: Highlight ShowUnInstDetails keyword for NSIS files (#2084879)
  BugFix: Could not reset EOL ignore after selecting it from query
   dialog (#2056741)
  BugFix: Displayed a blank time when file last modified time is 00:00:00
   (#2098626)
  Translation updates:
  - Brazilian (#2059836)
  - German (#2045666)
  - Greek (#2062442)
  - Japanese (r5804)
  - Russian (#2067785)
  - Swedish (#2062107)

WinMerge 2.9.10 - 2008-08-14 (r5804)
  Manual: Introduction update (#2011365)
  Manual: Reorganize structure (#2011924)
  Add ShellExtension menu for drive letters (root folders) (#2011602)
  Remove buildall.bat (#2013576)
  New option to enable plugins (disabled by default) (#2013845)
  Add dialog listing available plugins (#2021722)
  Refresh compare after changing filter (#2017426)
  Add "Open Conflict" for file/folder compare menus (#2025472)
  Add -u commandline parameter as alternative to -ub (#2029275, #2030359)
  Remove RCLocalizationHelper plugin (#2029457)
  Clarify Supercopier caused hang in release notes (#2030040)
  Confirmation dialog for move operations (#2026508)
  Unlimited undo (#2033754)
  Add wait cursor for undo and redo (#2039228)
  Rename color scheme menu item "None" and add separator (#2027300)
  Add icon for "Open Conflict File" menu item (#2047054)