@@ -51,35 +51,70 @@
 </head>
 <body>
 
-<h2>WinMerge 2.9.10 Beta Release Notes</h2>
+<h2>WinMerge 2.10 Release Candidate Release Notes</h2>
 <ul>
   <li><a href="#about">About This Release</a></li>
-  <li><a href="#new2910">What Is New in 2.9.10?</a></li>
+  <li><a href="#new210RC">What Is New in 2.10 RC?</a></li>
+  <li><a href="#new2910">What Is New in 2.9.10 Beta?</a></li>
   <li><a href="#issues">Known Issues</a></li>
 </ul>
-<p>August 2008</p>
+<p>September 2008</p>
 
 <h3><a name="about">About This Release</a></h3>
 
-<p>
-This is a WinMerge beta release which is meant for preview the current state of
-the WinMerge development. This release is not recommended for the production.
+<p class="note">
+This is a release candidate release for 2.10 stable release. This release
+contains all the new features that will be in 2.10 version. There are no big
+bugs left, and in general this release is safe to test and use.
 </p>
 
 <p>
 Please submit bug reports to our <a href=
 "https://sourceforge.net/tracker/?group_id=13216&amp;atid=113216">bug-tracker</a>.
+</p>
 
-<h3><a name="new2910">What Is New in 2.9.10?</a></h3>
+<h3><a name="new210RC">What Is New in 2.10 RC?</a></h3>
+<p>
+WinMerge 2.10 does not have many new features. Instead many existing features
+are improved and optimized. And some long-standing problems are fixed.
+</p>
+
 <p>
 For a complete changelog history, see the <code><a href="ChangeLog.txt">ChangeLog.txt</a></code>
 file located in the <code>Docs</code> folder under the WinMerge program folder.
 </p>
 
+<h4>Improved user manual</h4>
 <p>
-WinMerge 2.9.x will not have many new features. Instead many existing features
-will be improved and optimized. And some long-standing problems will be fixed.
+The user manual has been improved a lot. The content has been practically
+rewritten. There are more screenshots which visualize the features. There are
+more index terms and internal linking.
 </p>
+
+<h4>Improved Command Line handling</h4>
+<p>
+Command Line handling was rewritten and several bugs were fixed in the process.
+WinMerge had several long-standing bugs to handle certain kinds of paths and
+their combinations. This new implementation fixes these problems.
+</p>
+
+<h4>Bugs fixed:</h4>
+<ul>
+  <li>Crash when generating a folder comparison report</li>
+  <li>ClearCase checkout/commit dialog translation did not work</li>
+</ul>
+
+<h4>Translation updates</h4>
+<ul>
+  <li>Brazilian</li>
+  <li>German</li>
+  <li>Greek</li>
+  <li>Japanese</li>
+  <li>Russian</li>
+  <li>Swedish</li>
+</ul>
+
+<h3><a name="new2910">What Is New in 2.9.10 Beta?</a></h3>
 
 <h4>Regular expressions</h4>
 <p>
